--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <activity
             android:name=".register"
-            android:exported="false" />
+            android:exported="false"
+            android:label="register"/>
         <activity
             android:name=".testing"
             android:exported="false" />
@@ -32,7 +33,8 @@
             android:exported="false" />
         <activity
             android:name=".login"
-            android:exported="false" />
+            android:exported="false"
+            android:label="login"/>
         <activity
             android:name=".contact"
             android:exported="false" />
