--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.8'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.firebase:firebase-database:20.0.6'
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+    implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
