--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,12 @@
         android:theme="@style/Theme.FinalProject4"
         tools:targetApi="31">
         <activity
+            android:name=".Seat"
+            android:exported="false" />
+        <activity
             android:name=".register"
             android:exported="false"
-            android:label="register"/>
+            android:label="register" />
         <activity
             android:name=".testing"
             android:exported="false" />
@@ -34,7 +37,7 @@
         <activity
             android:name=".login"
             android:exported="false"
-            android:label="login"/>
+            android:label="login" />
         <activity
             android:name=".contact"
             android:exported="false" />
