--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:theme="@style/Theme.FinalProject4"
         tools:targetApi="31">
         <activity
-            android:name=".profile"
+            android:name=".succesPayment"
             android:exported="false" />
         <activity
-            android:name=".qrscan"
+            android:name=".profile"
             android:exported="false" />
         <activity
             android:name=".alfaPayment"
